--- a/backend/package.json
+++ b/backend/package.json
@@ -5,18 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts": "tsc"
+    "ts": "tsc",
+    "start": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
+    "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongoose": "^5.4.20",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.24",
+    "@types/morgan": "^1.7.35",
     "nodemon": "^1.18.10",
     "ts-node": "^8.0.3",
     "typescript": "^3.4.1"
