--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,10 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "target": "esnext",
-        "module":"commonjs",
-        "sourceMap": true,
-        "outDir": "/build",
-        "strict": true,
-        "watch": true,
-        "rootDir": "src"
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+	"compilerOptions": {
+		"allowJs": true,
+		"target": "esnext",
+		"module": "commonjs",
+		"outDir": "./build"
+	},
+	"include": ["./src/**/*"],
+	"exclude": ["node_modules"]
 }
