--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
 		"allowJs": true,
 		"target": "esnext",
 		"module": "commonjs",
-		"outDir": "./build"
+		"outDir": "./build/src"
 	},
 	"include": ["./src/**/*"],
 	"exclude": ["node_modules"]
