--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^3.0.5",
 		"body-parser": "^1.18.3",
 		"consign": "^0.1.6",
 		"cors": "^2.8.5",
 		"express": "^4.16.4",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.4.20",
 		"morgan": "^1.9.1"
 	},
