--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "connected-react-router": "^6.3.2",
     "history": "^4.9.0",
     "materialize-css": "^1.0.0-rc.2",
+    "nouislider": "^13.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
